fix: theme toggler shrink on small window

--- a/frontend/src/components/TogglerTheme.module.scss
+++ b/frontend/src/components/TogglerTheme.module.scss
@@ -19,6 +19,7 @@
   border-radius: 100px;
   position: relative;
   background: var(--color-bg-primary);
+  flex-shrink: 0;
 }
 
 .btnToggle:after {
